<resources>
    <string name="dialog_stock_name">股票名称</string>
    <string name="dialog_stock_code">股票代码</string>
    <string name="dialog_entrust_buy">委托确认</string>
    <string name="dialog_buy">买卖方向</string>
    <string name="dialog_time">委托时间</string>
    <string name="dialog_price">委托价格</string>
    <string name="dialog_entrust">委托数量</string>
    <string name="dialog_trade">成交数量</string>
    <string name="dialog_ok">确认</string>
    <string name="dialog_not">取消</string>
    <string name="dialog_logout_confirmation">确认退出已登录的所有账户吗？</string>
    <string name="dialog_account_switch_tip">请选择一个账户进行操作</string>
    <string name="dialog_account_normal">普通账户</string>
    <string name="dialog_account_credit">融资融券账户</string>
    <string name="dialog_account_option">个股期权账户</string>
    <string name="app_name">交易</string>
    <string name="home_buying_title">买入</string>
    <string name="home_sell_title">卖出</string>
    <string name="home_no_buy">撤单</string>
    <string name="home_query">查询</string>
    <string name="home_new_stock">新股申购</string>
    <string name="home_two_finance">融资融券</string>
    <string name="home_g_g_t">港股通</string>
    <string name="home_trans_stock">股转</string>
    <string name="home_fun_trade">场外基金交易</string>
    <string name="home_fun_trade_in">场内基金交易</string>
    <string name="home_fun_trade_level">分级基金交易</string>
    <string name="home_fun_trade_otc">OTC交易</string>
    <string name="home_transfer_account">银证转账</string>
    <string name="home_oneKey_collection">资金归集</string>
    <string name="home_modified_trade_password">修改交易密码</string>
    <string name="home_sign_agreement">退市板块协议签署</string>
    <string name="home_communication">修改通讯录密码</string>
    <string name="home_net_dir">网络投票</string>
    <string name="home_yu_sell">预售邀约</string>
    <string name="no_data_listview">暂无数据</string>
    <string name="home_loading_text">正在加载数据</string>
    <string name="main_fragment_all_money">总资产(RMB元)</string>
    <string name="main_fragment_today_profit">当日参考盈亏(元)</string>
    <string name="main_fragment_all_profit">总盈亏(元)</string>
    <string name="main_my_hold">我的持仓</string>
    <string name="main_today_trade">当日成交</string>
    <string name="main_today_entrust">当日委托</string>
    <string name="date_select_error">日期选择有误，请重新选择！</string>
    <string name="error_999">重新登陆</string>
    <string name="dateUpRange">31</string>
    <string name="login_title_normal">普通交易登录</string>
    <string name="login_title_credit">信用交易登录</string>
    <string name="login_title_option">个股期权账户登录</string>
    <string name="login_account">请输入资金账号</string>
    <string name="login_remember_password">记住账号</string>
    <string name="login_password">请输入交易密码</string>
    <string name="login_verify_code">请输入验证码</string>
    <string name="login_login_str">登录</string>
    <string name="login_input">请输入</string>
    <string name="login_account_hint">登录账号不能为空</string>
    <string name="login_password_hint">登录密码不能为空</string>
    <string name="login_verify_code_hint">验证码不能为空</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail_because">登录失败，原因是：</string>
    <string name="unity_login_failed0">600002调用失败！原因是：</string>
    <string name="unity_login_failed1">600003调用失败！原因是：</string>
    <string name="unity_login_failed2">600002请求太过频繁！</string>
    <string name="login_pwd_text">密码</string>
    <string name="login_account_text">账号</string>
    <string name="login_verify_text">验证码</string>
    <string name="login_hasnot_account_text">号不存在</string>
    <string name="toast_call_back_hq">行情回调失败！</string>
    <string name="rmb">¥</string>
    <string name="trade_multi_title">股票交易</string>
    <string name="trade_stock_code">证劵代码</string>
    <string name="trade_stock_name">股票名称</string>
    <string name="trade_rise_stop">涨停</string>
    <string name="trade_drop_stop">跌停</string>
    <string name="trade_buying">买入</string>
    <string name="trade_sell">卖出</string>
    <string name="trade_stock">股</string>
    <string name="trade_stock2">张</string>
    <string name="trade_logout">退出</string>
    <string name="trade_get_linkage_stock_failed">获取股票联动数据失败！原因是：</string>
    <string name="trade_get_linkage_stock_failed2">获取股票联动数据失败！</string>
    <string name="trade_buy1">买1</string>
    <string name="trade_buy2">买2</string>
    <string name="trade_buy3">买3</string>
    <string name="trade_buy4">买4</string>
    <string name="trade_buy5">买5</string>
    <string name="trade_sale1">卖1</string>
    <string name="trade_sale2">卖2</string>
    <string name="trade_sale3">卖3</string>
    <string name="trade_sale4">卖4</string>
    <string name="trade_sale5">卖5</string>
    <string name="trade_toast_input_price">请输入委托价格</string>
    <string name="trade_toast_input_amount">请输入委托数量</string>
    <string name="trade_toast_input_price2">委托价格不能为0</string>
    <string name="trade_toast_input_code">请输入股票代码</string>
    <string name="trade_toast_input_code2">未获取到证券信息</string>
    <string name="trade_toast_input_error">未获取到市价委托方式</string>
    <string name="trade_toast_select_bs">请选择买卖类别</string>
    <string name="trade_toast_input_buy_amount_error">买入数量应为%1$d的整数倍</string>
    <string name="trade_toast_input_sale_amount_error">卖出的数量应为%1$d的整数倍</string>
    <string name="trade_toast_select_stock_first">请先选择一支有效股票</string>
    <string name="trade_add">+</string>
    <string name="trade_stock_has_suspend">该股票已停牌</string>
    <string name="trade_hint_input_buy_price">请输入买入价</string>
    <string name="trade_hint_input_sale_price">请输入卖出价</string>
    <string name="trade_hint_most_buy">最多可买</string>
    <string name="trade_hint_most_sale">最多可卖</string>
    <string name="trade_buy_rb1">市价委托</string>
    <string name="trade_buy_rb2">限价委托</string>
    <string name="common_emp_text">--</string>
    <string name="revocation_entrust_value">委托价格</string>
    <string name="revocation_trade_value">成交价格</string>
    <string name="revocation_entrust_count">委托数</string>
    <string name="revocation_trade_count">成交数</string>
    <string name="revocation_actionbar_text">撤单</string>
    <string name="revocation_time">委托时间</string>
    <string name="revocation_a1">委托价</string>
    <string name="revocation_a2">成交价</string>
    <string name="revocation_a3">委托数</string>
    <string name="revocation_a4">成交数</string>
    <string name="select_today_entrust">当日委托</string>
    <string name="select_today_trade">当日成交</string>
    <string name="select_histortradey_entrust">历史委托</string>
    <string name="select_history_trade">历史成交</string>
    <string name="select_statement_account">对账单</string>
    <string name="select_today_money">当日资金流水</string>
    <string name="select_distribute_number">配号</string>
    <string name="select_numberwinning">中签</string>
    <string name="select_actionbar_text">查询</string>
    <string name="no_text_set">--</string>
    <string name="bracket_left">(</string>
    <string name="bracket_right">)</string>
    <string name="history_entrust_title">历史委托</string>
    <string name="today_trade">当日成交</string>
    <string name="today_entrust">当日委托</string>
    <string name="today_head_one">名称/时间</string>
    <string name="today_head_two">委托/成交价</string>
    <string name="today_head_three">委托/成交数</string>
    <string name="trade_money">金额</string>
    <string name="revocation_a5">成交价/成交数</string>
    <string name="revocation_a6">类型</string>
    <string name="revocation_a7">类型/状态</string>
    <string name="history_trade_title">历史成交</string>
    <string name="history_trade_fund">找不到该基金！</string>
    <string name="statement_title">对账单</string>
    <string name="statement_trade_count">成交数量</string>
    <string name="statement_trade_money">成交金额</string>
    <string name="statement_use_money">发生金额</string>
    <string name="statement0">股份本次余额</string>
    <string name="statement1">资金本次余额</string>
    <string name="statement2">货币类型</string>
    <string name="statement3">过户费</string>
    <string name="statement4">佣金</string>
    <string name="today_money_title">当日资金流水</string>
    <string name="today_money_entrust_no">委托编号</string>
    <string name="today_money_use">发生金额</string>
    <string name="today_money_type">币种</string>
    <string name="today_money_trade_price">成交价格</string>
    <string name="today_money_use_count">成交数量</string>
    <string name="today_mone">备注</string>
    <string name="today_money_hou">后资金额</string>
    <string name="money_type_num1">人民币总资产CNY</string>
    <string name="money_type_name1">¥</string>
    <string name="money_type_num2">港元总资产HKD</string>
    <string name="money_type_name2">$</string>
    <string name="money_type_num3">美元总资产USD</string>
    <string name="money_type_name3">$</string>
    <string name="head_pager_all_money">总资产</string>
    <string name="head_pager_all_port">总盈亏</string>
    <string name="head_pager__all_value">当日参考盈亏</string>
    <string name="head_pager_can_use">可用资金</string>
    <string name="head_pager_can_get">可取资金</string>
    <string name="head_pager_bank">银证转账</string>
    <string name="listview_expand_buy">买入</string>
    <string name="listview_expand_sale">卖出</string>
    <string name="listview_expand_hq">行情</string>
    <string name="blank">--</string>
    <string name="store_usable">我的持仓</string>
    <string name="new_subscribe_line1_text1">沪市</string>
    <string name="new_subscribe_line1_text2">深市</string>
    <string name="new_subscribe_line1_text3">可申购额度</string>
    <string name="new_subscribe_code">申购代码</string>
    <string name="new_subscribe_price">申购价格</string>
    <string name="new_subscribe_amount">申购数量</string>
    <string name="new_subscribe_head1">名称</string>
    <string name="new_subscribe_head2">发行价</string>
    <string name="new_subscribe_head3">单位(股)</string>
    <string name="new_subscribe_head4">上限(股)</string>
    <string name="new_subscribe_tips1">当前最多可申购</string>
    <string name="new_subscribe_select_new">请点击下方新股列表进行申购</string>
    <string name="new_subscribe_select_stock_first">请先选择一支要申购的新股</string>
    <string name="new_subscribe_amount_error1">请输入申购数量必须是申购单位</string>
    <string name="new_subscribe_amount_error2">的整数倍</string>
    <string name="new_subscribe_amount_error3">暂无可申购新股</string>
    <string name="distributeNum_title">配号</string>
    <string name="distributeNum_item_date">申购日期</string>
    <string name="distributeNum_item_count">委托数量</string>
    <string name="distributeNum_inem_dcount">配号数量</string>
    <string name="one_key_bank_name">银行名称</string>
    <string name="one_key_account_type">账户类型</string>
    <string name="one_key_money_other">资金余额</string>
    <string name="one_key_can_transfer">可转资金</string>
    <string name="fund_input_hint">请输入</string>
    <string name="fund_input_hint2">请选择</string>
    <string name="fund_commit">提  交</string>
    <string name="fund_pledge0">基金名称</string>
    <string name="fund_pledge1">基金净值</string>
    <string name="fund_pledge4">定投金额</string>
    <string name="fund_pledge5">开始日期</string>
    <string name="fund_pledge6">截止日期</string>
    <string name="fund_pledge7">扣款日:</string>
    <string name="fund_pledge10">温馨提示:</string>
    <string name="fund_pledge11">基金代码</string>
    <string name="fund_pledge_text1">1.基金定投周期为按月定投,会在扣款日在你的委托基金账户中扣款并委托基金申购</string>
    <string name="fund_pledge_text2">2.你可以在查询中查阅基金定投的委托情况</string>
    <string name="fund_pledge_text3">3.请保证每月扣款日时资金账户中有足够的可用资金,否则将申购失败哦</string>
    <string name="trans_select13">请输入证券代码</string>
    <string name="trans_select14">查询</string>
    <string name="trans_select15">名称/代码</string>
    <string name="trans_select16">涨停/跌停</string>
    <string name="trans_select17">交易市场</string>
    <string name="trans_select18">证券状态</string>
    <string name="option_buy1">请选择</string>
    <string name="option_buy12">提交委托</string>
    <string name="option_buy13">+</string>
    <string name="option_buy14">-</string>
    <string name="option_buy15">全部</string>
    <string name="option_buy16">请输入</string>
    <string name="option_buy22">证券名称</string>
    <string name="option_buy23">锁定数量</string>
    <string name="option_buy24">最多可锁</string>
</resources>