<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/trade_color_white"
              android:gravity="center_vertical"
              android:orientation="horizontal">

    <TextView
        android:paddingLeft="15dp"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/one_key_bank_name"
        android:textColor="@color/trade_top_tab_dark_gray"
        />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/one_key_account_type"

        android:textColor="@color/trade_top_tab_dark_gray"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:text="@string/one_key_money_other"
        android:textColor="@color/trade_top_tab_dark_gray"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:paddingRight="15dp"
        android:gravity="center_vertical|right"
        android:text="@string/one_key_can_transfer"
        android:textColor="@color/trade_top_tab_dark_gray"
        />
</LinearLayout>