<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/trade_normal_background">

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/trade_divide_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/trade_color_white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/option_buy22"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:gravity="center|right"
            android:hint="@string/option_buy1"
            android:drawableRight="@drawable/arrows_right_gray"
            android:drawablePadding="10dp"
            android:id="@+id/tv_select_stock"/>

    </LinearLayout>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/trade_divide_line"/>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/trade_divide_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/trade_color_white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/option_buy23"
            android:id="@+id/tv_entrust_str"/>

        <TextView
            android:id="@+id/tv_num_cut"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:gravity="center"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/common_all_corner_shi"
            android:text="@string/option_buy14"
            android:textColor="@color/trade_color_white"
            android:textSize="@dimen/login_button_text_size"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/option_buy16"
            android:singleLine="true"
            android:inputType="number"
            android:textColorHint="@color/trade_text_color0"
            android:textColor="@color/trade_text_color6"
            android:id="@+id/edt_entrust_num"
            android:textSize="@dimen/text_size"/>

        <TextView
            android:id="@+id/tv_num_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:gravity="center"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/common_all_corner_shi"
            android:text="@string/option_buy13"
            android:textColor="@color/trade_color_white"
            android:textSize="@dimen/login_button_text_size"/>

    </LinearLayout>


    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/trade_divide_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/trade_color_white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/option_buy24"
            android:id="@+id/tv_max_text"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:gravity="center|right"
            android:hint="@string/no_text_set"
            android:id="@+id/tv_max_enable"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/common_all_corner_shi"
            android:text="@string/option_buy15"
            android:textColor="@color/trade_color_white"
            android:id="@+id/tv_click_all_max"/>

    </LinearLayout>


    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/trade_divide_line"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/common_all_corner_shi"
        android:textColor="@color/trade_color_white"
        android:textSize="@dimen/text_size"
        android:text="@string/option_buy12"
        android:id="@+id/btn_click_commit"/>

</LinearLayout>