<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/trade_normal_background">

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/trade_divide_line"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/trade_color_white">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fund_pledge11"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/trade_text_color6"
            android:textSize="@dimen/buysell_button_text_size"/>

        <EditText android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|right"
            android:padding="10dp"
            android:background="@null"
            android:hint="@string/fund_input_hint"
            android:textSize="@dimen/buysell_button_text_size"
            android:inputType="textNoSuggestions"
            android:singleLine="true"
            android:maxLength="6"
            android:id="@+id/edt_fund_dire_code"/>

    </LinearLayout>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/trade_divide_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fund_pledge0"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/trade_text_color6"
            android:textSize="@dimen/buysell_button_text_size"/>

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|right"
            android:padding="10dp"
            android:hint="@string/no_text_set"
            android:textSize="@dimen/buysell_button_text_size"
            android:id="@+id/tv_fund_dire_name"/>

    </LinearLayout>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/trade_divide_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fund_pledge1"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/trade_text_color6"
            android:textSize="@dimen/buysell_button_text_size"/>

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|right"
            android:padding="10dp"
            android:hint="@string/no_text_set"
            android:textSize="@dimen/buysell_button_text_size"
            android:id="@+id/tv_fund_profit"/>

    </LinearLayout>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/trade_divide_line"/>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/trade_divide_line"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/trade_color_white">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fund_pledge4"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/trade_text_color6"
            android:textSize="@dimen/buysell_button_text_size"/>

        <EditText android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|right"
            android:padding="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/fund_input_hint"
            android:textSize="@dimen/buysell_button_text_size"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:id="@+id/edt_fund_pledge_num"/>

    </LinearLayout>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/trade_divide_line"/>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/trade_divide_line"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/trade_color_white">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fund_pledge5"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/trade_text_color6"
            android:textSize="@dimen/buysell_button_text_size"/>

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|right"
            android:padding="10dp"
            android:hint="@string/no_text_set"
            android:textSize="@dimen/buysell_button_text_size"
            android:id="@+id/tv_set_data_start"/>

    </LinearLayout>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/trade_divide_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/trade_color_white">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fund_pledge6"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/trade_text_color6"
            android:textSize="@dimen/buysell_button_text_size"/>

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|right"
            android:padding="10dp"
            android:hint="@string/no_text_set"
            android:textSize="@dimen/buysell_button_text_size"
            android:id="@+id/tv_set_data_end"/>

    </LinearLayout>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/trade_divide_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/trade_color_white">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fund_pledge7"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/trade_text_color6"
            android:textSize="@dimen/buysell_button_text_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:padding="10dp"
                android:hint="@string/fund_input_hint2"
                android:id="@+id/tv_select_data_take"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/arrows_right_gray"/>

    </LinearLayout>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/trade_divide_line"/>

    <Button
        android:id="@+id/btn_fund_commmit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/common_all_corner_shi"
        android:textSize="@dimen/login_button_text_size"
        android:textColor="@color/trade_color_white"
        android:text="@string/fund_commit"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fund_pledge10"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fund_pledge_text1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fund_pledge_text2"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fund_pledge_text3"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"/>

</LinearLayout>