<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/sll_statement"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/trade_normal_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/common_all_corner_white"
        android:id="@+id/lin_object_capital">

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:singleLine="true"
            android:inputType="number"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/trans_select13"
            android:textColorHint="@color/trade_text_color0"
            android:id="@+id/edt_capital_code"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:textColor="@color/trade_color_white"
            android:background="@drawable/common_right_corner_shi"
            android:text="@string/trans_select14"
            android:textSize="@dimen/text_size"
            android:id="@+id/tv_capital_click"/>

    </LinearLayout>

    <!-- 正在加载时显示的界面 -->
    <LinearLayout
        android:id="@+id/ll_capital_list_loading"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <ProgressBar
            android:id="@+id/fragment_ab_list_info_progressbar"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:indeterminateDrawable="@drawable/rotate_blue_trade_refresh_progressbar"/>

        <TextView
            android:text="@string/home_loading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_capital_have_data"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:text="@string/trans_select15"
                android:gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:text="@string/trans_select16"
                android:gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:text="@string/trans_select17"
                android:gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:text="@string/trans_select18"
                android:gravity="center"/>

        </LinearLayout>

    <com.thinkive.android.trade_bz.views.PullToRefresh.PullToRefreshListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lv_r_select_capital"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lin_not_data_set"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <ImageView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/not_data_listview"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data_listview"
            android:layout_marginTop="15dp"
            android:textColor="@color/trade_text_color6"
            android:textSize="@dimen/lsv_no_data_text"/>
    </LinearLayout>

</LinearLayout>